<resources>
    <string name="app_name">Open Dagen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="studies">Studies</string>
    <string name="yes">Yes</string>
    <string name="menu">Menu</string>
    <string name="Contact_page">Contact_page</string>
    <string name="questions_page">Questions Page</string>
    <string name="settings_page">Settings Page</string>

    <string name="todo">TODO</string>
    <string name="_0107944000">0107944000</string>
    <string name="would_you_rather_send_a_message_fill_the_form_in_below">Would you rather send a message? Fill the form in below.</string>
    <string name="name">Name</string>
    <string name="email">E-mail address</string>
    <string name="question">Question</string>
    <string name="send">Send</string>
    <string name="informatica">Informatica is a nice study etc</string>
    <string name="informaticaopenday2">On the open day of informatica you can....</string>
    <string name="informaticaopenday">Proin viverra, dui quis facilisis efficitur, nibh ligula imperdiet nulla, sit amet pulvinar mauris magna ut metus. Nam eu molestie eros, eget tincidunt ipsum. Fusce ut commodo purus. Etiam malesuada dui sed orci elementum, dictum feugiat sem tempus. Duis sem lorem, lacinia id consequat et, fringilla ac felis. Vivamus suscipit dolor et turpis accumsan blandit. Sed auctor sed erat eget maximus. Curabitur rhoncus turpis mauris. Cras elit est, consectetur vitae ligula eu, porttitor vestibulum libero. Vivamus imperdiet libero venenatis nisi porta blandit ut at odio. Praesent lectus ante, feugiat nec ex sit amet, dapibus rhoncus dolor</string>
    <string name="obutton">Open dagen</string>
    <string name="share">Share</string>
    <string name="OV">
        Take metro line D from Rotterdam Central Station to De Akkers or E to Slinge.
        Then step out at when you arrive at Beurs. Nextly walk 400 meters in the direction of De Kamer van Koophandel.
        Walk at the side of the water directed to the south of the city.</string>
    <string name="Car">
        Drive from  the south over the Erasmusbrug or from the north via the Coolsingel towards the cube houses.
        To do this you need to turn right onto the Posthoornstraat and then the second right onto Wijnhaven.</string>
    <string name="Tunnel">
        Maastunnel (partly) closed:\n
        From the 3rd of July until the end of September.
        The tunnel is being renovated.
        The result is that until then there will be only one tunnel open for motorized traffic from the south to the north.
        The Maastunnel is closed from the north to the south.</string>
    <string name="address_of_school">Address: Wijnhaven 107, 3011 WN Rotterdam Telephone: 0107944000\nEmail: studievoorlichting@hr.nl</string>
    <string name="link">Click for Map</string>
    <string name="click_on_the_button_to_call">Click on the button to call:</string>
    <string name="upc_opendays">Upcoming open days:</string>
    <string name="notyourstudy">Judging from your test results, we can not recommend an ICT study at our school.</string>
    <string name="youbelonghere">Based on your test results we can say that you have great knowledge of ICT and have a place in our school!</string>
    <string name="cmi_info">About our school\n\nThe institute for Communication, Media and Information technology(CMI)has with the studies Communication, Informatica, Technical Informatica, Creative Media and Game Technologies and Communication and Multimedia Design at least 3000 students who have a meaningful contribution in the boundless world of communication, media and ICT.\n</string>
</resources>